books now correctly create a column and row for themselves when added. also added overflow auto so the parent container doesnt overflow. The left new Book container sticks to the viewport now when the user scrolls

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 body {
-  /* background-color: rgb(133, 128, 243); */
   font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
@@ -11,7 +10,7 @@ body {
   flex-direction: column;
   justify-content: center;
   gap: 50px;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 * {
@@ -23,6 +22,7 @@ body {
   text-align: center;
   margin-top: 20px;
   font-size: 3rem;
+  grid-column: 1/6;
 }
 
 .book-entry-and-books-wrapper {
@@ -31,17 +31,25 @@ body {
   grid-template-columns: 0.3fr 1fr;
   background-color: rgba(209, 207, 207, 0.3);
   width: 95%;
-  height: 80vh;
+  height: 1016px;
   align-self: center;
   border-radius: 20px;
   backdrop-filter: blur(10px);
+  overflow: auto;
+}
+
+.author-wrapper {
+  position: sticky;
+  top: 0;
 }
 
 .book-entry-wrapper {
+  position: sticky;
+  top: 300px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   gap: 40px;
-  border-right: 1px solid rgba(105, 105, 105, 0.5);
 }
 
 .wallpaper-attribution {
@@ -59,4 +67,11 @@ a {
 
 a:hover {
   color: rgb(243, 235, 219);
+}
+
+.library-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 1fr);
+  grid-auto-rows: 228px;
+  border-left: 1px solid rgba(105, 105, 105, 0.5);
 }
